syntax="proto3";

package genproto;
option go_package="genproto/producer_service";

import "producer.proto";
import "google/protobuf/empty.proto";

service ProducerService {
    rpc CreateTopic(Topic) returns (TopicId) {}
    rpc Get(TopicId) returns (Topic) {}
    rpc GetAll(GetAllTopicRequest) returns (GetAllTopicResponse) {}
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty) {}
}

message GetAllTopicRequest {
    int64 offset = 1;
    int64 limit = 2;
    string name = 3;
}